Remove program arguments; rely entirely on stdin